<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edit_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:visibility="gone" />
                
        <EditText
            android:id="@+id/edit_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="time"
            android:hint="@string/edit_at" />

        <EditText
            android:id="@+id/edit_glucose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:hint="@string/edit_glucose">
            <requestFocus />
    	</EditText>

        <EditText
            android:id="@+id/edit_carbohydrates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/edit_carbohydrates" />

        <EditText
            android:id="@+id/edit_dose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:hint="@string/edit_dose" />

	    <Button
	        android:id="@+id/button_save"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="saveEntry"
	        android:text="@string/button_save" />
    </LinearLayout>
    <!--
         TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" /
    -->

	<LinearLayout
        android:id="@+id/list_entries_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>
	<ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
	    <LinearLayout
	        android:id="@+id/list_entries_container"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		    <LinearLayout
		        android:id="@+id/list_entries"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="vertical">
		    </LinearLayout>
		    <se.huffyreek.glucosejournal.GlucoseGraph
		        android:id="@+id/graph"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent">
		    </se.huffyreek.glucosejournal.GlucoseGraph>
	    </LinearLayout>
    </ScrollView>

</LinearLayout>
